--- a/lab5/5-yolo.ipynb
+++ b/lab5/5-yolo.ipynb
@@ -97,20 +97,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ultralytics 8.3.131 🚀 Python-3.12.9 torch-2.6.0+cu124 CPU (AMD Ryzen 5 3600 6-Core Processor)\n",
-      "Setup complete ✅ (12 CPUs, 15.5 GB RAM, 119.1/210.1 GB disk)\n"
+      "Ultralytics 8.3.140 🚀 Python-3.12.9 torch-2.6.0+cu124 CPU (AMD Ryzen 5 3600 6-Core Processor)\n",
+      "Setup complete ✅ (12 CPUs, 15.5 GB RAM, 119.2/210.1 GB disk)\n"
      ]
     }
    ],
    "source": [
-    "%pip install ultralytics\n",
+    "%pip install -U ultralytics\n",
     "import ultralytics\n",
     "ultralytics.checks()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "6441a4bf",
    "metadata": {
     "execution": {
@@ -126,8 +126,8 @@
    "source": [
     "# !pip install -U ipywidgets\n",
     "\n",
-    "import numpy as np # linear algebra\n",
-    "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
+    "import numpy as np \n",
+    "import pandas as pd\n",
     "\n",
     "import os\n",
     "\n",
@@ -148,30 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "d480f1fc",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "'_5_YOLO_(1).ipynb'\t\t dataset\n",
-      " 5-yolo.ipynb\t\t\t results.csv\n",
-      "'#5 YOLO.ipynb'\t\t\t results.png\n",
-      "'5Лаба_Нейронки (1) (1).ipynb'\t Underwater_Object_Detection.v1i.yolov11.zip\n",
-      " aquarium_pretrain_original\t yolo11n.pt\n",
-      " arch_images\n"
-     ]
-    }
-   ],
-   "source": [
-    "! ls"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "7f7784bb-fabd-48ee-a52c-7b5bd2357356",
    "metadata": {
     "execution": {
@@ -189,8 +166,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "image 1/1 /home/sypoo/mtuci/nn/lab5/dataset/test/images/IMG_2288_jpeg_jpg.rf.893035b1b07e50aa149778a94461d5a1.jpg: 640x640 1 bird, 158.8ms\n",
-      "Speed: 4.7ms preprocess, 158.8ms inference, 10.8ms postprocess per image at shape (1, 3, 640, 640)\n"
+      "image 1/1 /home/sypoo/mtuci/nn/lab5/dataset/test/images/IMG_2288_jpeg_jpg.rf.893035b1b07e50aa149778a94461d5a1.jpg: 640x640 1 bird, 82.9ms\n",
+      "Speed: 2.1ms preprocess, 82.9ms inference, 1.2ms postprocess per image at shape (1, 3, 640, 640)\n"
      ]
     }
    ],
@@ -215,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "f1ae375c",
    "metadata": {
     "execution": {
@@ -286,6 +263,197 @@
     "\n",
     "Проведите обучение модели, проанализируйте кривые обучения, метрики и тестовые данные. Сделайте вывод и корректироваки для достижения лучших показателей"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f821e6b8",
+   "metadata": {},
+   "source": [
+    "engine/trainer: agnostic_nms=False, amp=True, augment=False, auto_augment=randaugment, batch=16, bgr=0.0, box=7.5, cache=False, cfg=None, classes=None, close_mosaic=10, cls=0.5, conf=None, copy_paste=0.0, copy_paste_mode=flip, cos_lr=False, cutmix=0.0, data=dataset/data.yaml, degrees=0.0, deterministic=True, device=cpu, dfl=1.5, dnn=False, dropout=0.0, dynamic=False, embed=None, epochs=30, erasing=0.4, exist_ok=False, fliplr=0.5, flipud=0.0, format=torchscript, fraction=1.0, freeze=None, half=False, hsv_h=0.015, hsv_s=0.7, hsv_v=0.4, imgsz=640, int8=False, iou=0.7, keras=False, kobj=1.0, line_width=None, lr0=0.01, lrf=0.01, mask_ratio=4, max_det=300, mixup=0.0, mode=train, model=yolo11n.pt, momentum=0.937, mosaic=1.0, multi_scale=False, name=train, nbs=64, nms=False, opset=None, optimize=False, optimizer=auto, overlap_mask=True, patience=100, perspective=0.0, plots=True, pose=12.0, pretrained=True, profile=False, project=None, rect=False, resume=False, retina_masks=False, save=True, save_conf=False, save_crop=False, save_dir=/home/sypoo/mtuci/nn/lab5/runs/detect/train, save_frames=False, save_json=False, save_period=-1, save_txt=False, scale=0.5, seed=0, shear=0.0, show=False, show_boxes=True, show_conf=True, show_labels=True, simplify=True, single_cls=False, source=None, split=val, stream_buffer=False, task=detect, time=None, tracker=botsort.yaml, translate=0.1, val=True, verbose=True, vid_stride=1, visualize=False, warmup_bias_lr=0.1, warmup_epochs=3.0, warmup_momentum=0.8, weight_decay=0.0005, workers=8, workspace=None\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d46c1db9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ultralytics 8.3.140 🚀 Python-3.12.9 torch-2.6.0+cu124 CPU (AMD Ryzen 5 3600 6-Core Processor)\n",
+      "\u001b[34m\u001b[1mengine/trainer: \u001b[0magnostic_nms=False, amp=True, augment=False, auto_augment=randaugment, batch=16, bgr=0.0, box=7.5, cache=False, cfg=None, classes=None, close_mosaic=10, cls=0.5, conf=None, copy_paste=0.0, copy_paste_mode=flip, cos_lr=False, cutmix=0.0, data=dataset/data.yaml, degrees=0.0, deterministic=True, device=cpu, dfl=1.5, dnn=False, dropout=0.0, dynamic=False, embed=None, epochs=1, erasing=0.4, exist_ok=False, fliplr=0.5, flipud=0.0, format=torchscript, fraction=1.0, freeze=None, half=False, hsv_h=0.015, hsv_s=0.7, hsv_v=0.4, imgsz=640, int8=False, iou=0.7, keras=False, kobj=1.0, line_width=None, lr0=0.01, lrf=0.01, mask_ratio=4, max_det=300, mixup=0.0, mode=train, model=yolo11n.pt, momentum=0.937, mosaic=1.0, multi_scale=False, name=train, nbs=64, nms=False, opset=None, optimize=False, optimizer=auto, overlap_mask=True, patience=100, perspective=0.0, plots=True, pose=12.0, pretrained=True, profile=False, project=None, rect=False, resume=False, retina_masks=False, save=True, save_conf=False, save_crop=False, save_dir=/home/sypoo/mtuci/nn/runs/detect/train, save_frames=False, save_json=False, save_period=-1, save_txt=False, scale=0.5, seed=0, shear=0.0, show=False, show_boxes=True, show_conf=True, show_labels=True, simplify=True, single_cls=False, source=None, split=val, stream_buffer=False, task=detect, time=None, tracker=botsort.yaml, translate=0.1, val=True, verbose=True, vid_stride=1, visualize=False, warmup_bias_lr=0.1, warmup_epochs=3.0, warmup_momentum=0.8, weight_decay=0.0005, workers=8, workspace=None\n",
+      "Overriding model.yaml nc=80 with nc=7\n",
+      "\n",
+      "                   from  n    params  module                                       arguments                     \n",
+      "  0                  -1  1       464  ultralytics.nn.modules.conv.Conv             [3, 16, 3, 2]                 \n",
+      "  1                  -1  1      4672  ultralytics.nn.modules.conv.Conv             [16, 32, 3, 2]                \n",
+      "  2                  -1  1      6640  ultralytics.nn.modules.block.C3k2            [32, 64, 1, False, 0.25]      \n",
+      "  3                  -1  1     36992  ultralytics.nn.modules.conv.Conv             [64, 64, 3, 2]                \n",
+      "  4                  -1  1     26080  ultralytics.nn.modules.block.C3k2            [64, 128, 1, False, 0.25]     \n",
+      "  5                  -1  1    147712  ultralytics.nn.modules.conv.Conv             [128, 128, 3, 2]              \n",
+      "  6                  -1  1     87040  ultralytics.nn.modules.block.C3k2            [128, 128, 1, True]           \n",
+      "  7                  -1  1    295424  ultralytics.nn.modules.conv.Conv             [128, 256, 3, 2]              \n",
+      "  8                  -1  1    346112  ultralytics.nn.modules.block.C3k2            [256, 256, 1, True]           \n",
+      "  9                  -1  1    164608  ultralytics.nn.modules.block.SPPF            [256, 256, 5]                 \n",
+      " 10                  -1  1    249728  ultralytics.nn.modules.block.C2PSA           [256, 256, 1]                 \n",
+      " 11                  -1  1         0  torch.nn.modules.upsampling.Upsample         [None, 2, 'nearest']          \n",
+      " 12             [-1, 6]  1         0  ultralytics.nn.modules.conv.Concat           [1]                           \n",
+      " 13                  -1  1    111296  ultralytics.nn.modules.block.C3k2            [384, 128, 1, False]          \n",
+      " 14                  -1  1         0  torch.nn.modules.upsampling.Upsample         [None, 2, 'nearest']          \n",
+      " 15             [-1, 4]  1         0  ultralytics.nn.modules.conv.Concat           [1]                           \n",
+      " 16                  -1  1     32096  ultralytics.nn.modules.block.C3k2            [256, 64, 1, False]           \n",
+      " 17                  -1  1     36992  ultralytics.nn.modules.conv.Conv             [64, 64, 3, 2]                \n",
+      " 18            [-1, 13]  1         0  ultralytics.nn.modules.conv.Concat           [1]                           \n",
+      " 19                  -1  1     86720  ultralytics.nn.modules.block.C3k2            [192, 128, 1, False]          \n",
+      " 20                  -1  1    147712  ultralytics.nn.modules.conv.Conv             [128, 128, 3, 2]              \n",
+      " 21            [-1, 10]  1         0  ultralytics.nn.modules.conv.Concat           [1]                           \n",
+      " 22                  -1  1    378880  ultralytics.nn.modules.block.C3k2            [384, 256, 1, True]           \n",
+      " 23        [16, 19, 22]  1    432037  ultralytics.nn.modules.head.Detect           [7, [64, 128, 256]]           \n",
+      "YOLO11n summary: 181 layers, 2,591,205 parameters, 2,591,189 gradients, 6.4 GFLOPs\n",
+      "\n",
+      "Transferred 79/499 items from pretrained weights\n",
+      "Freezing layer 'model.23.dfl.conv.weight'\n",
+      "\u001b[34m\u001b[1mtrain: \u001b[0mFast image access ✅ (ping: 0.0±0.0 ms, read: 2056.4±730.7 MB/s, size: 57.6 KB)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mtrain: \u001b[0mScanning /home/sypoo/mtuci/nn/lab5/dataset/train/labels.cache... 1311 images, 0 backgrounds, 0 corrupt: 100%|██████████| 1311/1311 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mval: \u001b[0mFast image access ✅ (ping: 0.0±0.0 ms, read: 2804.5±791.6 MB/s, size: 69.4 KB)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[34m\u001b[1mval: \u001b[0mScanning /home/sypoo/mtuci/nn/lab5/dataset/valid/labels.cache... 100 images, 0 backgrounds, 0 corrupt: 100%|██████████| 100/100 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Plotting labels to /home/sypoo/mtuci/nn/runs/detect/train/labels.jpg... \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1moptimizer:\u001b[0m 'optimizer=auto' found, ignoring 'lr0=0.01' and 'momentum=0.937' and determining best 'optimizer', 'lr0' and 'momentum' automatically... \n",
+      "\u001b[34m\u001b[1moptimizer:\u001b[0m AdamW(lr=0.000909, momentum=0.9) with parameter groups 81 weight(decay=0.0), 88 weight(decay=0.0005), 87 bias(decay=0.0)\n",
+      "Image sizes 640 train, 640 val\n",
+      "Using 0 dataloader workers\n",
+      "Logging results to \u001b[1m/home/sypoo/mtuci/nn/runs/detect/train\u001b[0m\n",
+      "Starting training for 1 epochs...\n",
+      "\n",
+      "      Epoch    GPU_mem   box_loss   cls_loss   dfl_loss  Instances       Size\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "        1/1         0G      2.667       4.12      2.377        130        640: 100%|██████████| 82/82 [06:05<00:00,  4.45s/it]\n",
+      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100%|██████████| 4/4 [00:14<00:00,  3.51s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   all        100        723      0.848     0.0253     0.0639     0.0327\n",
+      "\n",
+      "1 epochs completed in 0.106 hours.\n",
+      "Optimizer stripped from /home/sypoo/mtuci/nn/runs/detect/train/weights/last.pt, 5.5MB\n",
+      "Optimizer stripped from /home/sypoo/mtuci/nn/runs/detect/train/weights/best.pt, 5.5MB\n",
+      "\n",
+      "Validating /home/sypoo/mtuci/nn/runs/detect/train/weights/best.pt...\n",
+      "Ultralytics 8.3.140 🚀 Python-3.12.9 torch-2.6.0+cu124 CPU (AMD Ryzen 5 3600 6-Core Processor)\n",
+      "YOLO11n summary (fused): 100 layers, 2,583,517 parameters, 0 gradients, 6.3 GFLOPs\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100%|██████████| 4/4 [00:10<00:00,  2.64s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   all        100        723      0.848     0.0254     0.0639     0.0327\n",
+      "                  fish         54        397      0.217      0.116     0.0892     0.0343\n",
+      "             jellyfish          7        125       0.72     0.0618      0.301      0.164\n",
+      "               penguin         11         57          1          0     0.0047    0.00102\n",
+      "                puffin         11         50          1          0    0.00181   0.000982\n",
+      "                 shark         23         49          1          0    0.00449    0.00245\n",
+      "              starfish         10         15          1          0    0.00835    0.00386\n",
+      "              stingray         20         30          1          0     0.0376     0.0225\n",
+      "Speed: 3.1ms preprocess, 88.7ms inference, 0.0ms loss, 8.1ms postprocess per image\n",
+      "Results saved to \u001b[1m/home/sypoo/mtuci/nn/runs/detect/train\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test local train\n",
+    "# data_kaggel_path = \"/kaggle/input/augumented-underwater-objects/data.yaml\"\n",
+    "data_local_path = \"dataset/data.yaml\"\n",
+    "# results = model.train(data=data_kaggel_path, epochs=30, imgsz=640, plots=True)\n",
+    "test_results = model.train(data=data_local_path, epochs=1, imgsz=640, plots=True, save=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "d29f82b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "image 1/1 /home/sypoo/mtuci/nn/lab5/dataset/test/images/IMG_2288_jpeg_jpg.rf.893035b1b07e50aa149778a94461d5a1.jpg: 640x640 (no detections), 57.0ms\n",
+      "Speed: 1.2ms preprocess, 57.0ms inference, 0.5ms postprocess per image at shape (1, 3, 640, 640)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "path_to_best_model = f\"{test_results.save_dir}/weights/best.pt\"\n",
+    "best_model = YOLO(path_to_best_model)\n",
+    "img = \"dataset/test/images/IMG_2288_jpeg_jpg.rf.893035b1b07e50aa149778a94461d5a1.jpg\"\n",
+    "best_model.predict(img)[0].show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b93218bd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1359,9 +1527,7 @@
    "source": [
     "# обучение, оценка, визуализация\n",
     "data_kaggel_path = \"/kaggle/input/augumented-underwater-objects/data.yaml\"\n",
-    "data_local_path = \"dataset/data.yaml\"\n",
-    "results = model.train(data=data_kaggel_path, epochs=30, imgsz=640, plots=True)\n",
-    "# results = model.train(data=data_local_path, epochs=30, imgsz=640, plots=True)"
+    "results = model.train(data=data_kaggel_path, epochs=30, imgsz=640, plots=True)\n"
    ]
   },
   {
