--- a/lab5/5-yolo.ipynb
+++ b/lab5/5-yolo.ipynb
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "id": "7f7784bb-fabd-48ee-a52c-7b5bd2357356",
    "metadata": {
     "execution": {
@@ -166,8 +166,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "image 1/1 /home/sypoo/mtuci/nn/lab5/dataset/test/images/IMG_2288_jpeg_jpg.rf.893035b1b07e50aa149778a94461d5a1.jpg: 640x640 1 bird, 82.9ms\n",
-      "Speed: 2.1ms preprocess, 82.9ms inference, 1.2ms postprocess per image at shape (1, 3, 640, 640)\n"
+      "image 1/1 /home/sypoo/mtuci/nn/lab5/000000000025.jpg: 448x640 1 giraffe, 60.6ms\n",
+      "Speed: 0.8ms preprocess, 60.6ms inference, 2.5ms postprocess per image at shape (1, 3, 448, 640)\n"
      ]
     }
    ],
@@ -175,7 +175,8 @@
     "#импорт модели\n",
     "model = YOLO(\"yolo11n.pt\")\n",
     "# img=\"/kaggle/input/augumented-underwater-objects/test/images/IMG_2288_jpeg_jpg.rf.893035b1b07e50aa149778a94461d5a1.jpg\"\n",
-    "img = \"dataset/test/images/IMG_2288_jpeg_jpg.rf.893035b1b07e50aa149778a94461d5a1.jpg\"\n",
+    "img = \"dataset/test/images/IMG_2371_jpeg_jpg.rf.8ae6076cb199a7f274e795252e38dab0.jpg\"\n",
+    "img = \"000000000025.jpg\"\n",
     "model.predict(img)[0].show()"
    ]
   },
@@ -274,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "d46c1db9",
    "metadata": {},
    "outputs": [
@@ -420,12 +421,143 @@
     "# data_kaggel_path = \"/kaggle/input/augumented-underwater-objects/data.yaml\"\n",
     "data_local_path = \"dataset/data.yaml\"\n",
     "# results = model.train(data=data_kaggel_path, epochs=30, imgsz=640, plots=True)\n",
-    "test_results = model.train(data=data_local_path, epochs=1, imgsz=640, plots=True, save=True)"
+    "test_results = model.train(data=data_local_path, epochs=1, imgsz=640, plots=True, save=True, close_mosaic=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
+   "id": "9611d11d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>class_name</th>\n",
+       "      <th>box-p</th>\n",
+       "      <th>box-r</th>\n",
+       "      <th>box-f1</th>\n",
+       "      <th>box-map</th>\n",
+       "      <th>box-map50</th>\n",
+       "      <th>box-map75</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>fish</td>\n",
+       "      <td>0.217258</td>\n",
+       "      <td>0.115869</td>\n",
+       "      <td>0.151134</td>\n",
+       "      <td>0.032686</td>\n",
+       "      <td>0.063895</td>\n",
+       "      <td>0.028658</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>jellyfish</td>\n",
+       "      <td>0.719637</td>\n",
+       "      <td>0.061760</td>\n",
+       "      <td>0.113758</td>\n",
+       "      <td>0.032686</td>\n",
+       "      <td>0.063895</td>\n",
+       "      <td>0.028658</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>penguin</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.032686</td>\n",
+       "      <td>0.063895</td>\n",
+       "      <td>0.028658</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>puffin</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.032686</td>\n",
+       "      <td>0.063895</td>\n",
+       "      <td>0.028658</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>shark</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.032686</td>\n",
+       "      <td>0.063895</td>\n",
+       "      <td>0.028658</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>starfish</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.032686</td>\n",
+       "      <td>0.063895</td>\n",
+       "      <td>0.028658</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>stingray</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.032686</td>\n",
+       "      <td>0.063895</td>\n",
+       "      <td>0.028658</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  class_name     box-p     box-r    box-f1   box-map  box-map50  box-map75\n",
+       "0       fish  0.217258  0.115869  0.151134  0.032686   0.063895   0.028658\n",
+       "1  jellyfish  0.719637  0.061760  0.113758  0.032686   0.063895   0.028658\n",
+       "2    penguin  1.000000  0.000000  0.000000  0.032686   0.063895   0.028658\n",
+       "3     puffin  1.000000  0.000000  0.000000  0.032686   0.063895   0.028658\n",
+       "4      shark  1.000000  0.000000  0.000000  0.032686   0.063895   0.028658\n",
+       "5   starfish  1.000000  0.000000  0.000000  0.032686   0.063895   0.028658\n",
+       "6   stingray  1.000000  0.000000  0.000000  0.032686   0.063895   0.028658"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_results.to_df()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "id": "d29f82b8",
    "metadata": {},
    "outputs": [
@@ -434,8 +566,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "image 1/1 /home/sypoo/mtuci/nn/lab5/dataset/test/images/IMG_2288_jpeg_jpg.rf.893035b1b07e50aa149778a94461d5a1.jpg: 640x640 (no detections), 57.0ms\n",
-      "Speed: 1.2ms preprocess, 57.0ms inference, 0.5ms postprocess per image at shape (1, 3, 640, 640)\n"
+      "image 1/1 /home/sypoo/mtuci/nn/lab5/000000000025.jpg: 448x640 (no detections), 109.2ms\n",
+      "Speed: 3.6ms preprocess, 109.2ms inference, 0.5ms postprocess per image at shape (1, 3, 448, 640)\n"
      ]
     }
    ],
@@ -444,16 +576,122 @@
     "path_to_best_model = f\"{test_results.save_dir}/weights/best.pt\"\n",
     "best_model = YOLO(path_to_best_model)\n",
     "img = \"dataset/test/images/IMG_2288_jpeg_jpg.rf.893035b1b07e50aa149778a94461d5a1.jpg\"\n",
+    "img = \"000000000025.jpg\"\n",
     "best_model.predict(img)[0].show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "b93218bd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ultralytics 8.3.140 🚀 Python-3.12.9 torch-2.6.0+cu124 CPU (AMD Ryzen 5 3600 6-Core Processor)\n",
+      "\u001b[34m\u001b[1mval: \u001b[0mFast image access ✅ (ping: 0.0±0.0 ms, read: 634.0±538.2 MB/s, size: 50.7 KB)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mval: \u001b[0mScanning /home/sypoo/mtuci/nn/lab5/dataset/valid/labels.cache... 100 images, 0 backgrounds, 0 corrupt: 100%|██████████| 100/100 [00:00<?, ?it/s]\n",
+      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100%|██████████| 7/7 [00:08<00:00,  1.19s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   all        100        723      0.848     0.0254     0.0639     0.0327\n",
+      "                  fish         54        397      0.217      0.116     0.0892     0.0343\n",
+      "             jellyfish          7        125       0.72     0.0618      0.301      0.164\n",
+      "               penguin         11         57          1          0     0.0047    0.00102\n",
+      "                puffin         11         50          1          0    0.00181   0.000982\n",
+      "                 shark         23         49          1          0    0.00449    0.00245\n",
+      "              starfish         10         15          1          0    0.00835    0.00386\n",
+      "              stingray         20         30          1          0     0.0376     0.0225\n",
+      "Speed: 1.4ms preprocess, 65.4ms inference, 0.0ms loss, 12.5ms postprocess per image\n",
+      "Results saved to \u001b[1m/home/sypoo/mtuci/nn/runs/detect/val3\u001b[0m\n",
+      "Ultralytics 8.3.140 🚀 Python-3.12.9 torch-2.6.0+cu124 CPU (AMD Ryzen 5 3600 6-Core Processor)\n",
+      "\u001b[34m\u001b[1mval: \u001b[0mFast image access ✅ (ping: 0.0±0.0 ms, read: 2712.8±640.5 MB/s, size: 75.9 KB)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mval: \u001b[0mScanning /home/sypoo/mtuci/nn/lab5/dataset/test/labels.cache... 100 images, 0 backgrounds, 0 corrupt: 100%|██████████| 100/100 [00:00<?, ?it/s]\n",
+      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100%|██████████| 7/7 [00:08<00:00,  1.19s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   all        100        825      0.841     0.0378     0.0574     0.0271\n",
+      "                  fish         41        319      0.258      0.211       0.13      0.053\n",
+      "             jellyfish         13        184       0.63     0.0543      0.236      0.125\n",
+      "               penguin         14        141          1          0    0.00349    0.00149\n",
+      "                puffin         15         86          1          0    0.00161   0.000719\n",
+      "                 shark         20         45          1          0     0.0132    0.00434\n",
+      "              starfish         14         32          1          0    0.00533    0.00186\n",
+      "              stingray         13         18          1          0     0.0111    0.00307\n",
+      "Speed: 1.3ms preprocess, 65.2ms inference, 0.0ms loss, 12.8ms postprocess per image\n",
+      "Results saved to \u001b[1m/home/sypoo/mtuci/nn/runs/detect/val4\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "best_model_validation_results_val = best_model.val(split='val', verbose=True, plots=True)\n",
+    "best_model_validation_results_test = best_model.val(split='test', verbose=True, plots=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "2d7cbe34",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ultralytics 8.3.140 🚀 Python-3.12.9 torch-2.6.0+cu124 CPU (AMD Ryzen 5 3600 6-Core Processor)\n",
+      "\u001b[34m\u001b[1mval: \u001b[0mFast image access ✅ (ping: 0.0±0.0 ms, read: 273.9±373.2 MB/s, size: 72.8 KB)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mval: \u001b[0mScanning /home/sypoo/mtuci/nn/lab5/dataset/train/labels.cache... 1311 images, 0 backgrounds, 0 corrupt: 100%|██████████| 1311/1311 [00:00<?, ?it/s]\n",
+      "                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100%|██████████| 82/82 [01:47<00:00,  1.31s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   all       1311       9762      0.845     0.0271     0.0458     0.0216\n",
+      "                  fish        713       5830      0.318       0.12      0.109     0.0406\n",
+      "             jellyfish         96       1152      0.596     0.0703      0.176     0.0963\n",
+      "               penguin        138        947          1          0     0.0021   0.000924\n",
+      "                puffin        120        444          1          0    0.00169   0.000602\n",
+      "                 shark        399        774          1          0    0.00734    0.00244\n",
+      "              starfish        105        207          1          0    0.00619    0.00297\n",
+      "              stingray        273        408          1          0     0.0183    0.00769\n",
+      "Speed: 1.3ms preprocess, 62.2ms inference, 0.0ms loss, 9.8ms postprocess per image\n",
+      "Results saved to \u001b[1m/home/sypoo/mtuci/nn/runs/detect/val5\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "best_model_validation_results_train = best_model.val(split='train', verbose=True, plots=True)"
+   ]
   },
   {
    "cell_type": "code",
@@ -3101,6 +3339,28 @@
     "        plt.show()\n",
     "    else:\n",
     "        print(f\"⚠️ Файл не найден: {fname}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "e3197143",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "image 1/1 /home/sypoo/mtuci/nn/lab5/000000000025.jpg: 448x640 (no detections), 89.0ms\n",
+      "Speed: 0.9ms preprocess, 89.0ms inference, 0.4ms postprocess per image at shape (1, 3, 448, 640)\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_test = YOLO(\"best.pt\")\n",
+    "img = \"000000000025.jpg\"\n",
+    "model_test.predict(img)[0].show()"
    ]
   }
  ],
