--- a/lab5/test.ipynb
+++ b/lab5/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "2b600884",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "68a741e1",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "f628995d",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
+   "id": "6701a6b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "image 1/1 /home/sypoo/mtuci/nn/lab5/test_images/ocean_image_from_internet.jpg: 416x640 92 fishs, 46.7ms\n",
+      "Speed: 1.4ms preprocess, 46.7ms inference, 0.7ms postprocess per image at shape (1, 3, 416, 640)\n",
+      "\n",
+      "image 1/1 /home/sypoo/mtuci/nn/lab5/test_images/ocean_image_from_internet.jpg: 416x640 89 fishs, 43.7ms\n",
+      "Speed: 1.5ms preprocess, 43.7ms inference, 0.8ms postprocess per image at shape (1, 3, 416, 640)\n"
+     ]
+    }
+   ],
+   "source": [
+    "img1 = \"test_images/ocean_image_from_internet.jpg\"\n",
+    "model_1.predict(img1)[0].show()\n",
+    "model_2.predict(img1)[0].show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "ba60bbcc",
    "metadata": {},
    "outputs": [
@@ -67,36 +92,15 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "image 1/1 /home/sypoo/mtuci/nn/lab5/test_images/ocean_image_from_internet.jpg: 416x640 92 fishs, 42.9ms\n",
-      "Speed: 2.6ms preprocess, 42.9ms inference, 0.8ms postprocess per image at shape (1, 3, 416, 640)\n",
+      "image 1/1 /home/sypoo/mtuci/nn/lab5/test_images/ocean_image_from_internet_resized.jpg: 640x640 100 fishs, 86.9ms\n",
+      "Speed: 1.2ms preprocess, 86.9ms inference, 0.9ms postprocess per image at shape (1, 3, 640, 640)\n",
       "\n",
-      "image 1/1 /home/sypoo/mtuci/nn/lab5/test_images/ocean_image_from_internet.jpg: 416x640 89 fishs, 44.9ms\n",
-      "Speed: 1.7ms preprocess, 44.9ms inference, 0.9ms postprocess per image at shape (1, 3, 416, 640)\n",
-      "\n",
-      "image 1/1 /home/sypoo/mtuci/nn/lab5/test_images/ocean_image_from_internet_resized.jpg: 640x640 100 fishs, 70.5ms\n",
-      "Speed: 1.3ms preprocess, 70.5ms inference, 1.0ms postprocess per image at shape (1, 3, 640, 640)\n",
-      "\n",
-      "image 1/1 /home/sypoo/mtuci/nn/lab5/test_images/ocean_image_from_internet_resized.jpg: 640x640 79 fishs, 111.6ms\n",
-      "Speed: 1.4ms preprocess, 111.6ms inference, 3.6ms postprocess per image at shape (1, 3, 640, 640)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "(eog:196463): EOG-CRITICAL **: 04:00:59.377: eog_image_get_file: assertion 'EOG_IS_IMAGE (img)' failed\n",
-      "\n",
-      "(eog:196463): GLib-GIO-CRITICAL **: 04:00:59.377: g_file_equal: assertion 'G_IS_FILE (file1)' failed\n"
+      "image 1/1 /home/sypoo/mtuci/nn/lab5/test_images/ocean_image_from_internet_resized.jpg: 640x640 79 fishs, 72.5ms\n",
+      "Speed: 1.3ms preprocess, 72.5ms inference, 0.8ms postprocess per image at shape (1, 3, 640, 640)\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "img1 = \"test_images/ocean_image_from_internet.jpg\"\n",
-    "model_1.predict(img1)[0].show()\n",
-    "model_2.predict(img1)[0].show()\n",
-    "\n",
     "img2 = \"test_images/ocean_image_from_internet_resized.jpg\"\n",
     "model_1.predict(img2)[0].show()\n",
     "model_2.predict(img2)[0].show()"
@@ -104,7 +108,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
+   "id": "931c4bd2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "image 1/1 /home/sypoo/mtuci/nn/lab5/test_images/sharks_in_aquarium.jpg: 448x640 3 fishs, 1 shark, 1 stingray, 68.8ms\n",
+      "Speed: 13.2ms preprocess, 68.8ms inference, 0.7ms postprocess per image at shape (1, 3, 448, 640)\n",
+      "\n",
+      "image 1/1 /home/sypoo/mtuci/nn/lab5/test_images/sharks_in_aquarium.jpg: 448x640 11 fishs, 1 shark, 1 stingray, 53.2ms\n",
+      "Speed: 2.2ms preprocess, 53.2ms inference, 0.8ms postprocess per image at shape (1, 3, 448, 640)\n"
+     ]
+    }
+   ],
+   "source": [
+    "img3 = \"test_images/sharks_in_aquarium.jpg\"\n",
+    "model_1.predict(img3)[0].show()\n",
+    "model_2.predict(img3)[0].show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "id": "a7549042",
    "metadata": {},
    "outputs": [
@@ -113,28 +142,18 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "image 1/1 /home/sypoo/mtuci/nn/lab5/test_images/sharks_in_aquarium.jpg: 448x640 3 fishs, 1 shark, 1 stingray, 47.6ms\n",
-      "Speed: 3.9ms preprocess, 47.6ms inference, 0.6ms postprocess per image at shape (1, 3, 448, 640)\n",
+      "image 1/1 /home/sypoo/mtuci/nn/lab5/test_images/sharks_in_aquarium_resized.jpg: 640x640 11 fishs, 2 jellyfishs, 1 shark, 1 stingray, 101.8ms\n",
+      "Speed: 1.4ms preprocess, 101.8ms inference, 0.7ms postprocess per image at shape (1, 3, 640, 640)\n",
       "\n",
-      "image 1/1 /home/sypoo/mtuci/nn/lab5/test_images/sharks_in_aquarium.jpg: 448x640 11 fishs, 1 shark, 1 stingray, 43.6ms\n",
-      "Speed: 1.5ms preprocess, 43.6ms inference, 0.7ms postprocess per image at shape (1, 3, 448, 640)\n",
-      "\n",
-      "image 1/1 /home/sypoo/mtuci/nn/lab5/test_images/sharks_in_aquarium_resized.jpg: 640x640 11 fishs, 2 jellyfishs, 1 shark, 1 stingray, 101.9ms\n",
-      "Speed: 1.4ms preprocess, 101.9ms inference, 0.7ms postprocess per image at shape (1, 3, 640, 640)\n",
-      "\n",
-      "image 1/1 /home/sypoo/mtuci/nn/lab5/test_images/sharks_in_aquarium_resized.jpg: 640x640 13 fishs, 1 shark, 1 stingray, 71.7ms\n",
-      "Speed: 1.9ms preprocess, 71.7ms inference, 0.7ms postprocess per image at shape (1, 3, 640, 640)\n"
+      "image 1/1 /home/sypoo/mtuci/nn/lab5/test_images/sharks_in_aquarium_resized.jpg: 640x640 13 fishs, 1 shark, 1 stingray, 79.6ms\n",
+      "Speed: 1.2ms preprocess, 79.6ms inference, 0.7ms postprocess per image at shape (1, 3, 640, 640)\n"
      ]
     }
    ],
    "source": [
-    "img1 = \"test_images/sharks_in_aquarium.jpg\"\n",
-    "model_1.predict(img1)[0].show()\n",
-    "model_2.predict(img1)[0].show()\n",
-    "\n",
-    "img2 = \"test_images/sharks_in_aquarium_resized.jpg\"\n",
-    "model_1.predict(img2)[0].show()\n",
-    "model_2.predict(img2)[0].show()"
+    "img4 = \"test_images/sharks_in_aquarium_resized.jpg\"\n",
+    "model_1.predict(img4)[0].show()\n",
+    "model_2.predict(img4)[0].show()"
    ]
   },
   {
